--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,6 +142,46 @@ a {
   background-color: var(--my-blue);
   opacity: 0.8;
 }
+
+/*Product box*/
+.productInfo {
+  position: relative;
+  overflow: hidden;
+}
+.productImageContainer {
+}
+.productImage {
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+.productBrand,
+.productName,
+.productPrice {  
+  padding: 2px;
+  color: var(--my-blue);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.productBrand {
+  letter-spacing: 1px;
+  font-size: 1.1em;
+  font-weight: bold;  
+}
+.productName {
+
+}
+.productPrice {
+
+}
+.currency {
+  font-size: 0.8em;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
 @media only screen  and (min-width: 800px) {
   .carousell {
   }
