--- a/views/includes/elements/product.ejs
+++ b/views/includes/elements/product.ejs
@@ -1,10 +1,8 @@
 <section class="productInfo">
-    <p class="likeProduct">
-        <i class="far fa-heart"></i>
-        <i class="fas fa-heart"></i>
-    </p>
-    <img src="<%=productUrl%>" alt="<%=p.name%>" class="productImage">
+    <div class="productImageContainer">
+        <img src="images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
+    </div>
     <p class="productBrand"><%=p.brand%></p>
     <p class="productName"><%=p.name%></p>
-    <p class="productPrice"><%=p.price%></p>
+    <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
 </section>
