--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -6,7 +6,7 @@
 
     <main class="mainContainer">
         <section class="sideNav">
-            side navigation
+            <%- include('./includes/elements/navBar', { sideNav: true}) %>
         </section>
 
         <section class="productGallery">
