--- a/views/includes/elements/product.ejs
+++ b/views/includes/elements/product.ejs
@@ -1,8 +1,10 @@
-<section class="productInfo">
-    <div class="productImageContainer">
-        <img src="images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
-    </div>
-    <p class="productBrand"><%=p.brand%></p>
-    <p class="productName"><%=p.name%></p>
-    <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
-</section>
+<a href="/products/:<%=p._id%>" class="productLink">
+    <section class="productInfo">
+        <div class="productImageContainer">
+            <img src="images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
+        </div>
+        <p class="productBrand"><%=p.brand%></p>
+        <p class="productName"><%=p.name%></p>
+        <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
+    </section>
+</a>
