error while retrieving images accessing /users/ endpoints handled

--- a/views/includes/elements/inputbox.ejs
+++ b/views/includes/elements/inputbox.ejs
@@ -1,1 +1,1 @@
-<input type="text" name="" id="" class="inputText">
+<input type="text" name="<%=name%>" id="" class="textInput<%= locals.newClass ? newClass : ''%>">
