--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -30,7 +30,7 @@
                                     <span class="socialIconSubMenu"><%-subMenu.image%></span>
                                 <%}%>
                                 <%if(subMenu.imgUrl) {%>
-                                   <img src="./images/logos/<%=subMenu.imgUrl%>" alt="<%=subMenu.name%>" class="paymentPartnerLogo">
+                                   <img src="/images/logos/<%=subMenu.imgUrl%>" alt="<%=subMenu.name%>" class="paymentPartnerLogo">
                                 <%} else {%>
                                     <%=subMenu.name%>
                                 <%}%>
