--- a/views/includes/topBar.ejs
+++ b/views/includes/topBar.ejs
@@ -1,6 +1,6 @@
 <section class="topBar">    
     <div class="logoContainer topBarComponent">
-        <a href="/"><img src="images/landing-page-images/losnanos.png" alt="logo" class="siteLogo"></a>
+        <a href="/"><img src="/images/landing-page-images/losnanos.png" alt="logo" class="siteLogo"></a>
     </div>
 
     <div class="leftSide">
@@ -13,7 +13,7 @@
         </div>
 
         <div class="userAuthentication topBarComponent" >
-            <p class="topBarImage userLogo"><i class="far fa-user"></i></p>
+            <a href="/users"><p class="topBarImage userLogo"><i class="far fa-user"></i></p></a>
             <a href="/users/login" class="authentication-msg">Log in</a> 
         </div>
 
