--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,12 +144,27 @@ a {
 }
 
 /*Product box*/
+.productLink {
+  border: 2px solid transparent;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: var(--pearl-white);
+  text-decoration: none;
+}
+.productLink:hover {
+  border-color: var(--creamy-purple);
+  box-shadow: 0px 0px 10px var(--brick-red);
+}
+.productLink:hover .productImage{
+  transform: scale(1.05, 1.05);
+}
 .productInfo,
 .productLink {
   position: relative;
   overflow: hidden;
 }
 .productImageContainer {
+  overflow: hidden
 }
 .productImage {
   min-width: 100%;
@@ -157,6 +172,7 @@ a {
   min-height: 100%;
   max-height: 100%;
   object-fit: cover;
+  transition: transform 250ms ease-in-out 0ms;
 }
 .productBrand,
 .productName,
