--- a/views/adminViews/adminHome.ejs
+++ b/views/adminViews/adminHome.ejs
@@ -3,6 +3,8 @@
 </head>
 <body>
     <%- include('../includes/topNav') %>
+
+    <%- include('./adminMenu') %>
     <h1 class="title"><%=title%></h1>
     <main>
         <h2 class="activityHeader">What do you wish to do?</h2>
