--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,11 +6,11 @@
     <h1 class="title"><%= adminUser === true ? 'admin' : 'user'%> Login Page</h1>
     <form action="" method="post" class="userLoginForm">
         <section class="fieldContainer">
-            <label for="" class="formLabel">User name</label>
+            <label for="username" class="formLabel">User name</label>
             <input type="text" name="username" id="username" class="formInput">
         </section>
-        <section class="fieldContainer"></section>
-            <label for="" class="formLabel">Password</label>
+        <section class="fieldContainer">
+            <label for="password" class="formLabel">Password</label>
             <input type="password" name="password" id="password" class="formInput">
         </section>
         <button class="formBtn formInput">Submit</button>
