--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,19 +1,20 @@
-.title {
-    text-transform: capitalize;
-    text-align: center;
-    color: var(--my-blue);
-    margin: 20px auto;
-    letter-spacing: 1px;
-    word-spacing: 1px;
-}
-.userLoginForm {
-    padding: 10px;
-    border: 2px solid var(--creamy-purple);
+.newProductForm {
+    border: 1px solid var(--creamy-purple);
     border-radius: 5px;
-    background-color: var(--pearl-white);
-    width: 95vw;
-    margin: 20px auto;
-    box-shadow: 0px 0px 10px var(--light-purple);
+    padding: 10px;
+    margin: 10px auto;
+    width: 90%;
+}
+
+.dropDownContainer {
+    text-transform: capitalize;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: end;
+}
+.selectOption {
+    text-transform: capitalize;
 }
 
 .fieldContainer {
@@ -21,10 +22,11 @@
 }
 
 .formLabel {
-    color: var(--creamy-purple-dark);
+    padding: 10px 0px 10px;
+    color: var(--my-blue);
     font-weight: bold;
     letter-spacing: 1px;
-    display: block;
+    display: auto;
 }
 .formInput {
     padding: 10px;
@@ -40,7 +42,7 @@
 }
 
 .formBtn {
-    width: 60%;
+    width: 45%;
     display: block;  /* Needs to be block-element for margin: auto to center the element */
     margin: 20px auto 10px;
     color: var(--pearl-white);
@@ -57,18 +59,3 @@
     outline-color: pink;    
 }
 
-/* Login with social networks or other services */
-.otherLoginOps  {
-
-}
-.loginOpsText {
-    text-align: center;
-    color: var(--creamy-purple);
-}
-
-@media only screen and (min-width: 880px) {
-    .userLoginForm {
-        width: 40vw;
-
-    }
-}
