--- a/views/adminViews/addProduct.ejs
+++ b/views/adminViews/addProduct.ejs
@@ -19,7 +19,7 @@
             <label for="price" class="formLabel">Price</label>
             <input type="number" name="price" id="price" class="formInput">
         </section>
-        <section class="fieldContainer centerFlexEven" id="prodClassification">
+        <section class="fieldContainer centerFlexSpaceBetween" id="prodClassification">
             <%- include('./adminElements/selectGender') %>
             <%- include('./adminElements/selectCategory') %>
             <%- include('./adminElements/selectType') %>
