--- a/views/adminViews/adminElements/selectGender.ejs
+++ b/views/adminViews/adminElements/selectGender.ejs
@@ -1,6 +1,6 @@
 <section class="dropDownContainer">
-    <label for="gender" class="formLabel">Gender</label>
-    <select name="gender" id="prodGender" class="formInput genderSelection" required>
+    <label for="gender" class="formLabel centerFlex">Gender</label>
+    <select name="gender" id="prodGender" class="formInput genderSelection adminDropDown" required>
         <option value="male" selected>Boys</option>
         <option value='female'>Girls</option>
     </select>
