--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -6,15 +6,22 @@
     width: 90%;
 }
 
-.dropDownContainer {
+.dropDownContainer { 
     text-transform: capitalize;
     padding: 10px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: end;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: var(--pearl-white);
+    border-radius: 5px;
+}
+
+.adminDropDown {
+    min-width: 150px;
+    text-transform: capitalize;
 }
 .selectOption {
-    text-transform: capitalize;
+    text-transform: capitalize; 
 }
 
 .fieldContainer {
@@ -26,7 +33,7 @@
     color: var(--my-blue);
     font-weight: bold;
     letter-spacing: 1px;
-    display: auto;
+    min-width: 100px;
 }
 .formInput {
     padding: 10px;
