--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,9 +170,12 @@ a {
   overflow: hidden;
 }
 .productImageContainer {
-  overflow: hidden
+  overflow: hidden;
+  border-radius: 5px;
 }
 .productImage {
+  display: block;
+  border-radius: 5px;
   min-width: 100%;
   max-width: 100%;
   min-height: 100%;
