--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,16 @@ a {
 }
 
 .pageTitle {
+  color: var(--my-blue);
+  margin: 20px auto;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+}
+
+.sectionTitle {
+  margin: 10px auto 0;
   background-color: var(--brick-red);
   color: var(--pearl-white);
   text-align: center;
