--- a/views/adminViews/manageProducts.ejs
+++ b/views/adminViews/manageProducts.ejs
@@ -8,8 +8,11 @@
     <main>
         <h2 class="activityHeader">What do you wish to do?</h2>
         <ul class="activityList">
-            <li class="activityList__item"><a href="/admin/addProduct" class="activityList__link">Add new product</a></li>
-            <li class="activityList__item"><a href="/admin/manageProducts" class="activityList__link">Manage Products</a></li>
+            <li class="activityList__item centerFlex"><a href="/admin/addProduct" class="activityList__link">Add new product</a></li>
+            <li class="activityList__item centerFlex"><a href="/admin/manageProducts" class="activityList__link">Manage Products</a></li>
+            <li class="activityList__item centerFlex"><a href="/admin/addCategory" class="activityList__link">Add new category</a></li>
+            <li class="activityList__item centerFlex"><a href="/admin/addProdType" class="activityList__link">Add new Product Type</a></li>
+            <li class="activityList__item centerFlex"><a href="/admin/addSize" class="activityList__link">Add new Size</a></li>
         </ul>
     </main>
     
