--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -3,7 +3,7 @@
 </head>
 <body>
     <%- include('./includes/topNav') %>
-    <h1>Cart</h1>
+    <h1 class="pageTitle">Cart</h1>
     <%- include('./includes/footer') %>
 </body>
 </html>
