--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 </head>
 <body>
     <%- include('./includes/topNav') %>
-    <h1 class="title"><%= adminUser === true ? 'admin' : 'user'%> Login Page</h1>
+    <h1 class="pageTitle"><%= adminUser === true ? 'admin' : 'user'%> Login Page</h1>
     <form action="" method="post" class="userLoginForm">
         <section class="fieldContainer">
             <label for="username" class="formLabel">User name</label>
