Some routes and controllers defined

--- a/views/adminViews/addCategory.ejs
+++ b/views/adminViews/addCategory.ejs
@@ -9,7 +9,7 @@
     <form action="" method="post" class="newCategoryForm">
         <section class="fieldContainer">
             <label for="category" class="formLabel">Catetory Name</label>
-            <input type="text" name="Category" id="Category" class="formInput" required>
+            <input type="text" name="category" id="category" class="formInput" required>
         </section>
         <div class="centerFlex">
             <button type="submit" class="formBtn formInput">Submit</button>
