--- a/views/adminViews/adminHome.ejs
+++ b/views/adminViews/adminHome.ejs
@@ -8,9 +8,9 @@
     <h1 class="title"><%=title%></h1>
     <main>
         <h2 class="activityHeader">What do you wish to do?</h2>
-        <ul class="activityList">
-            <li class="activityList__item"><a href="/admin/manageUsers" class="activityList__link">Manage Users</a></li>
-            <li class="activityList__item"><a href="/admin/manageProducts" class="activityList__link">Manage Products</a></li>
+        <ul class="activityList adminHomeContainer">
+            <li class="activityList__item centerFlex"><a href="/admin/manageUsers" class="activityList__link centerFlex">Manage Users</a></li>
+            <li class="activityList__item centerFlex"><a href="/admin/manageProducts" class="activityList__link centerFlex">Manage Products</a></li>
         </ul>
     </main>
     
