--- a/views/adminViews/prodCategories.ejs
+++ b/views/adminViews/prodCategories.ejs
@@ -6,12 +6,25 @@
     <%- include('./adminMenu') %>
     <h1 class="title"><%=title%></h1>
     <main>
-        <%if(locals.categories) {%>
-            <ul class="itemList">
+        <%if(locals.categories.length > 0) {%>
+            <ol class="itemList">
             <%categories.forEach( category => {%>
-                <li class="itemList__item"><%=category%></li>
+                <li class="itemList__item">
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Id</span>
+                        <span class="sectionValue"><%=category._id%></span>
+                    </div>
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Name</span>
+                        <span class="sectionValue"><%=category.name%></span>
+                    </div>    
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Audience</span>
+                        <span class="sectionValue"><%=category.audience.name%></span>
+                    </div>                
+                </li>
             <%})%>
-            </ul>
+            </ol>
         <%} else {%>
             <h2>No Category Found</h2>
         <%}%>
