--- a/views/adminViews/prodSizes.ejs
+++ b/views/adminViews/prodSizes.ejs
@@ -10,6 +10,28 @@
             <ul class="itemList">
             <%prodSizes.forEach( prodSize => {%>
                 <li class="itemList__item"><%=prodSize%></li>
+                <li class="itemList__item">
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Id</span>
+                        <span class="sectionValue"><%=prodSize._id%></span>
+                    </div>
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Name</span>
+                        <span class="sectionValue"><%=prodSize.name%></span>
+                    </div>
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Product Type</span>
+                        <span class="sectionValue"><%=prodSize.prodType.name%></span>
+                    </div>    
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Category</span>
+                        <span class="sectionValue"><%=prodSize.prodType.category.name%></span>
+                    </div>    
+                    <div class="listProps">
+                        <span class="sectionName centerFlex">Audience</span>
+                        <span class="sectionValue"><%=prodSize.prodType.category.audience.name%></span>
+                    </div>               
+                </li>
             <%})%>
             </ul>
         <%} else {%>
