gets right sizes

--- a/views/adminViews/addProduct.ejs
+++ b/views/adminViews/addProduct.ejs
@@ -24,6 +24,11 @@
             <%- include('./adminElements/selectCategory') %>
             <%- include('./adminElements/selectType') %>
         </section>
+
+        <section class="fieldContainer centerFlexSpaceBetween sizeSelector" id="prodSizes">
+            
+
+        </section>
         
         <div class="centerFlex">
                 <button type="submit" class="formBtn formInput">Submit</button>
