--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -91,6 +91,10 @@
     text-transform: capitalize;
 }
 
+.sizeSelector {
+    border: 1px solid green;
+}
+
 
 @media only screen and (min-width: 800px) {
 
