can display sizes

--- a/views/adminViews/addProduct.ejs
+++ b/views/adminViews/addProduct.ejs
@@ -25,9 +25,11 @@
             <%- include('./adminElements/selectType') %>
         </section>
 
-        <section class="fieldContainer centerFlexSpaceBetween sizeSelector" id="prodSizes">
-            
+        <section class="fieldContainer centerFlexSpaceBetween sizeSelector" id="prodSizesConainer">
+            <label for="price" class="formLabel">Sizes</label>
+            <section id="sizes">
 
+            </section>
         </section>
         
         <div class="centerFlex">
