sizebox and number of products to be added visible

--- a/views/adminViews/addProduct.ejs
+++ b/views/adminViews/addProduct.ejs
@@ -25,8 +25,12 @@
             <%- include('./adminElements/selectType') %>
         </section>
 
-        <section class="fieldContainer centerFlexSpaceBetween sizeSelector" id="prodSizesConainer">
-            <label for="price" class="formLabel">Sizes</label>
+        <section class="fieldContainer sizeSelector" id="prodSizesConainer">
+            <section class="centerFlexSpaceBetween">
+                <p class="formLabel">Sizes</p>
+                <p class="formLabel">Number of products to be added in this size</p> 
+            </section>
+
             <section id="sizes">
 
             </section>
