--- a/views/adminViews/addSize.ejs
+++ b/views/adminViews/addSize.ejs
@@ -21,7 +21,7 @@
             </section>
 
             <section class="fieldContainer">
-                <label for="sizes" class="formLabel">Catetory Name <span class="note">(a coma separated list of sizes)</span></label>
+                <label for="sizes" class="formLabel">Sizes <span class="note">(a coma separated list of sizes)</span></label>
                 <input type="text" name="sizes" id="sizes" class="formInput" required value="<%= (locals.sizes) ? sizes : '' %>">
             </section>
         </section>
