admin side product page looks better, client-side category page looks better

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -104,6 +104,11 @@
     text-transform: uppercase;
     margin: 10px;
 }
+.adminOptions {
+    position: absolute;
+    width: 100%;
+    bottom: 10px;
+}
 
 
 @media only screen and (min-width: 800px) {
