--- a/views/adminViews/adminElements/product.ejs
+++ b/views/adminViews/adminElements/product.ejs
@@ -1,14 +1,16 @@
 <div class="productLink">
-    <section class="productInfo">
+    <section class="productInfo productInfo-admin">
         <div class="productImageContainer">
             <img src="/images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
         </div>
-        <p class="productBrand"><%=p.brand%></p>
-        <p class="productName"><%=p.name%></p>
-        <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
+        <div>
+            <p class="productBrand"><%=p.brand%></p>
+            <p class="productName"><%=p.name%></p>
+            <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
+        </div>        
     </section>
-    <div class="centerFlexSpaceBetween">            
-        <a href="/admin/addProduct">Edit</a>
+    <div class="adminOptions centerFlexSpaceBetween ">            
+        <a href="/admin/addProduct/:<%=p%>">Edit</a>
         <a href="/admin/deleteProduct">Delete</a>
     </div>
 </div>
