--- a/views/includes/elements/product.ejs
+++ b/views/includes/elements/product.ejs
@@ -3,8 +3,11 @@
         <div class="productImageContainer">
             <img src="images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
         </div>
-        <p class="productBrand"><%=p.brand%></p>
-        <p class="productName"><%=p.name%></p>
-        <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
+        <div>
+            <p class="productBrand"><%=p.brand%></p>
+            <p class="productName"><%=p.name%></p>
+            <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
+        </div>
+        
     </section>
 </a>
