topnav and sidenav links fire proper endPoints and right PARCIAL/INCLUDE file (the same) used for side and and top nav

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -6,7 +6,7 @@
 
     <main class="mainContainer">
         <section class="sideNav">
-            <%- include('./includes/elements/navBar', { sideNav: true}) %>
+            <%- include('./includes/navBar', { sideNav: true}) %>
         </section>
 
         <section class="productGallery">
